--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,24 @@
     box-sizing: border-box;
     font-family: 'Fira Sans', sans-serif;
 }
+
+.episode-layout{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    min-width: 100vh;
+}
+
+.episode-box{
+    padding: 0.5rem
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    background-color: #fff;
+    border-bottom: 1px solid #000;
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+}
