--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,23 @@
     font-family: 'Fira Sans', sans-serif;
 }
 
+body{
+    background-color: #f0f0f0
+}
+
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #fff;
+    border-bottom: 1px solid #000;
+    padding: 1rem;
+    position: sticky;
+    top: 0;
+    background-color: #fff
+}
+
 .episode-layout{
     display: flex;
     justify-content: space-around;
@@ -15,15 +32,52 @@
 }
 
 .episode-box{
-    padding: 0.5rem
+    margin: 1em 0.5rem
 }
 
-.header {
+.episode-img{
+    border-radius: 1em;
+    transition: all 0.3s ease-in-out;
+}
+
+.episode-img:hover{
+    transform: scale(1.1);
+}
+
+.episode-img:hover ~ .image-text {
     display: flex;
-    justify-content: space-between;
-    background-color: #fff;
-    border-bottom: 1px solid #000;
-    padding: 1rem;
-    position: sticky;
-    top: 0;
+}
+
+.image-text{
+    display: none;
+    border-radius: 1em;
+    width: 250px;
+    height: 10px;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    text-shadow: 1px 1px 5px #000;
+    font-size: 1.75rem;
+    font-weight: bold;
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+    transform: translateY(-80px);
+}
+
+.image-text:hover{
+    display: flex;
+}
+
+.episode-name{
+    margin: 0.5em 0;
+    text-align: center;
+}
+
+.episode-data{
+    display: flex;
+    justify-content: space-around;
+}
+
+button{
+    padding: 0 0.5em
 }
