--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,19 @@ body{
 
 .header {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     background-color: #fff;
     border-bottom: 1px solid #000;
     padding: 1rem;
     position: sticky;
     top: 0;
-    background-color: #fff
+    background-color: #fff;
+}
+
+.link{
+    text-decoration: none;
+    color: #000;
 }
 
 .episode-layout{
